--- a/app/views/cadastro.ejs
+++ b/app/views/cadastro.ejs
@@ -30,28 +30,41 @@
 		</nav>
 
 	    <div class="container">
+	    	
+	    	<% if ( errors.length > 0 ) {%>
 	    		
-			<form class="form-cadastro">
-			
+	    		<div class="alert alert-danger">
+					<strong>Atenção!</strong>
+	    			<ul>
+	    				<% for ( var i = 0; i < errors.length; i++ ) { %>
+	    					<li> <%= errors[i].msg %> </li>
+	    				<% } %>
+	    			</ul>
+	    		</div>
+	    		
+	    	<% } %>
+	    		
+			<form class="form-cadastro" action="/cadastrar" method="post">
+				
 				<div class="row">
 					<div class="col-xs-4">
 						<div class="form-group">
 							<label for="nome" class="col-sm-2 col-form-label">Nome</label>
-							<input type="nome" class="form-control" id="nome" placeholder="Nome">
+							<input type="nome" value="<%=formDados.nome%>" class="form-control" id="nome" name="nome" placeholder="Nome">
 						</div>
 					</div>
 					
 					<div class="col-xs-4">
 						<div class="form-group">
 							<label for="usuario" class="col-sm-2 col-form-label">Usuário</label>
-							<input type="usuario" class="form-control" id="usuario" placeholder="Usuário">
+							<input type="usuario" value="<%=formDados.usuario%>" class="form-control" id="usuario"name="usuario" placeholder="Usuário">
 						</div>
 					</div>
 					
 					<div class="col-xs-4">
 						<div class="form-group">
 							<label for="senha" class="col-sm-2 col-form-label">Senha</label>
-							<input type="password" class="form-control" id="senha" placeholder="Password">
+							<input type="password" value="<%=formDados.senha%>" class="form-control" id="senha" name="senha" placeholder="Password">
 						</div>
 					</div>
 				</div>
