--- a/app/views/jogo.ejs
+++ b/app/views/jogo.ejs
@@ -13,7 +13,14 @@
 	
 		<!-- incluindo css -->
 		<link href="css/style.css" rel="stylesheet">
-
+		
+		<script>
+			$( document ).ready( () => {
+				$('#btn_sair').click( () => {
+					window.location.href = '/sair'
+				})
+			})
+		</script>
 	</head>
 
 	<body class="body-jogo">
@@ -21,7 +28,7 @@
 		<nav class="navbar navbar-default navbar-static-top">
 			<div class="container">
 				<div class="form-group sair">
-					<button type="button" class="btn btn-info pull-right">Sair</button>
+					<button type="button" class="btn btn-info pull-right" id="btn_sair">Sair</button>
 				</div>
 			</div>
 		</nav>
@@ -30,7 +37,7 @@
 	    	
 			<div class="row">
 	    		<div class="col-sm-3 casa">
-					<img src="images/casa_martell.jpg" />
+					<img src="images/casa_<%=img_casa%>.jpg" />
 				</div>
 
 	    		<div class="col-sm-9">
