Criação das ações

--- a/app/views/jogo.ejs
+++ b/app/views/jogo.ejs
@@ -19,7 +19,33 @@
 				$('#btn_sair').click( () => {
 					window.location.href = '/sair'
 				})
+				
+				$('#btn_suditos').click( () => {
+					$('#msg_erros').hide()
+					
+					$.ajax({
+						url:'/suditos'
+						, method: 'get'
+						, success: ( data ) => {
+							$('#acoes').html( data )
+						}
+					})
+				})
+				
+				$('#btn_pergaminhos').click( () => {
+					$('#msg_erros').hide()
+					
+					$.ajax({
+						url: '/pergaminhos'
+						,method: 'get'
+						,success: ( data ) => {
+							$('#acoes').html( data )
+						}
+					})
+				})
 			})
+			
+			
 		</script>
 	</head>
 
@@ -34,6 +60,14 @@
 		</nav>
 
 	    <div class="container">
+	    	
+	    	<% if ( comando_invalido === 'S' ) {%>
+	    		
+	    		<div class="alert alert-danger" id="msg_erros">
+					<strong>Operação inválida, verifique se todos os campos foram informados!</strong>
+	    		</div>
+	    		
+	    	<% } %>
 	    	
 			<div class="row">
 	    		<div class="col-sm-3 casa">
@@ -68,7 +102,7 @@
 			<div class="row">
 				<div class="col-sm-3"></div>
 				<div class="col-sm-9">
-					<div class="acoes"></div>					
+					<div class="acoes" id="acoes"> Senhor, o quê deseja fazer hoje?</div>					
 				</div>
 			</div>
 			
@@ -79,12 +113,12 @@
 			
 				<div class="row">
 					<div class="col-sm-1">
-						<img src="images/outros/suditos.jpg" title="Aldeões" alt="Aldeões"/>
+						<img src="images/outros/suditos.jpg" title="Aldeões" alt="Aldeões" id="btn_suditos"/>
 						<span><%=jogo.suditos%></span>
 					</div>
 					
 					<div class="col-sm-1">
-						<img src="images/outros/pergaminho.jpg" title="Pergaminhos" alt="Pergaminhos"/>
+						<img src="images/outros/pergaminho.jpg" title="Pergaminhos" alt="Pergaminhos"  id="btn_pergaminhos"/>
 					</div>
 					
 					<div class="col-sm-8"></div>
